# Galaga

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Galaga.cscope_file_list  Galaga.depend  Galaga.layout  LICENSE  README  README.md  config.json  main.cpp
assets/images/: TextureMap_Project.xcf
assets/music/: shooting.sfs
headers/: Alien.hpp  Nave.hpp
include/: Nave.h
source/: Alien.cpp  Nave.cpp
src/: CMakeLists.txt  Nave.cpp  main.cpp
